Fix hero illustration overflow, header dropdown and tablet margins

--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -49,7 +49,7 @@ footer {
     };
 };
 
-@media all and (min-width: $laptop){
+@media all and (min-width: $tablet){
     footer {
         flex-direction: row;
         flex-wrap: initial;
