--- a/src/styles/components/_hero.scss
+++ b/src/styles/components/_hero.scss
@@ -6,8 +6,9 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    padding: 1em 0 2em 0;
+    padding: 7em 0 2em 0;
     background-color: white;
+    overflow: hidden;
 };
 
 .working-illustration {
@@ -19,7 +20,7 @@
  > img {
     position: relative;
     left: 10%;
-    width: 137%;
+    width: 126%;
  };
 };
 
