--- a/src/styles/components/_info.scss
+++ b/src/styles/components/_info.scss
@@ -74,9 +74,15 @@
 
 };
 
+@media all and (min-width: $tablet) {
+    .info-container {
+        padding: 4em $margin-tablet-X 3em $margin-tablet-X;
+    };
+};
+
 @media all and (min-width: $laptop) {
     .info-container {
-        padding: 9em $margin-desk-X 4em $margin-desk-X;
+        padding: 7.5em $margin-desk-X 4em $margin-desk-X;
 
         h2 {
             font-size: 40px;
