--- a/src/styles/components/_list.scss
+++ b/src/styles/components/_list.scss
@@ -49,6 +49,12 @@
 };
 
 
+@media (min-width: $tablet) {
+    #list {
+        margin: 1em $margin-tablet-X;
+    };
+};
+
 @media(min-width: 832px) and (max-width: $laptop){
 
     .collection-links {
@@ -74,7 +80,7 @@
     };
 
     .collection-links {
-        padding: 10px;
+        padding: 1em;
         align-items: center;
         max-height: 80px;
     };
